初步完成一个简单的 间隔1分钟将SVN的文件拿下来，然后上传到服务器上面去。